GNOME Bugzilla – Bug 669327
totem --play doesn't resume playing
Last modified: 2012-03-28 15:21:59 UTC
Using totem 3.3.4: - start playing a video in totem - run totem --pause on a command line -> the video pauses - run totem --play on a command line the video should resume playing but it doesn't
Created attachment 210775 [details] [review] main: Fix remote option parsing When calling a function remotely for the second time, we were inheriting the options from the first call. Eg. --pause followed by --play would play and pause instantly the second time.
Review of attachment 210775 [details] [review]: Fixes the problem for me. ::: src/totem.c @@ +200,3 @@ + /* Reset the options, if they were used before */ + memset (&optionstate, 0, sizeof(optionstate)); Missing space after ‘sizeof’, if it matters.
Comment on attachment 210775 [details] [review] main: Fix remote option parsing Committed with the white space fix.